--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: chenyh
-avatar: /static/images/chrysanthemum.jpg
+avatar: /static/favicons/花卷.svg
 occupation: Web Developer
 # company: Stanford University
 email: chenyh.site@gmail.com
