--- a/data/snippet/tools.mdx
+++ b/data/snippet/tools.mdx
@@ -1,7 +1,6 @@
 ---
 title: 实用工具收集
 date: '2024-07-30'
-tags: ['vscode', 'json', 'settings']
 draft: false
 ---
 
@@ -12,3 +11,7 @@ draft: false
 ## [whistle](https://github.com/avwo/whistle)
 
 基于 Node 实现的跨平台抓包调试工具
+
+## [Alfred](https://www.alfredapp.com/)
+
+macOS 上的一款效率神器
