--- a/data/blog/webpack-split.mdx
+++ b/data/blog/webpack-split.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 
 ---
 
-对于大型 SPA 来说如果不做任何配置，整出一个业务 chunk 的话，单个 chunk 的体积就会特别大，网络环境差时加载起来更是灾难，白屏问题也将会比较严重，
+对于大型 SPA 来说如果不做任何配置，整出一个业务 chunk 的话，单个 chunk 的体积就会特别大，网络环境差时加载起来更是灾难，白屏问题将会比较严重，
 因此就需要将单个 chunk 按照一定原则拆分成多个，还可以控制各个 chunk 的加载顺序。
 
 ## 路由拆分
@@ -117,7 +117,7 @@ module.exports = {
 }
 ```
 
-但更好的做法是将基本固定的第三方依赖单独拆分，这样每次构建这部分基本不会发生变动可以更好的利用缓存策略，比如下面将 react 和 rxjs 都拆分成单独 chunks
+但更好的做法是将基本固定的第三方依赖单独拆分，这样每次构建这部分基本不会发生变动可以更好的利用缓存策略，比如下面将 react 和 rxjs 都拆分成单独 chunk
 
 ```js
 /**
