--- a/data/blog/css-anchor-positioning-api.mdx
+++ b/data/blog/css-anchor-positioning-api.mdx
@@ -49,7 +49,7 @@ button {
       bottom: 'anchor(top)', 
       left: 'anchor(right)',
     }} 
-    class="py-2 px-4 bg-slate-300 rounded shadow"
+    className="py-2 px-4 bg-slate-300 rounded shadow"
   >popover</div>
 </div>
 
