--- a/data/blog/rss.mdx
+++ b/data/blog/rss.mdx
@@ -1,7 +1,7 @@
 ---
 title: 如何用 RSS 订阅一切
 date: '2023-12-22'
-tags: ['rss', 'javascript']
+tags: ['rss', 'javascript', 'nodejs']
 draft: false
 summary: 摆脱推荐算法，简化你的信息获取方式，如何用 RSS 订阅一切，网站、博客、社交平台...
 ---
