feat(components): mdx 支持展示 .heic Image

--- a/data/blog/css-anchor-positioning-api.mdx
+++ b/data/blog/css-anchor-positioning-api.mdx
@@ -3,6 +3,7 @@ title: CSS Anchor Positioning API
 date: '2024-08-03'
 tags: ['css']
 draft: false
+layout: PostSimple
 summary: 使用最新的 CSS Anchor Position API 更方便的实现锚定相对定位
 ---
 
