--- a/data/snippet/wuhan-sky.mdx
+++ b/data/snippet/wuhan-sky.mdx
@@ -7,3 +7,5 @@ draft: false
 <img src="/static/images/gallery/sky.jpg" />
 
 <img src="/static/images/gallery/sky-building.jpg" />
+
+<HEICImage src="/static/images/gallery/sky-cloud.HEIC" />
