add Compatibility display

--- a/data/blog/css-anchor-positioning-api.mdx
+++ b/data/blog/css-anchor-positioning-api.mdx
@@ -54,4 +54,8 @@ button {
   >popover</div>
 </div>
 
+## 兼容性
+
+<Compatibility target="css-anchor-positioning" height="500px" />
+
 [^1]: [CSS Anchor Positioning API](https://developer.chrome.com/blog/anchor-positioning-api)
