--- a/data/snippet/wuhan-sky.mdx
+++ b/data/snippet/wuhan-sky.mdx
@@ -8,4 +8,4 @@ draft: false
 
 <img src="/static/images/gallery/sky-building.jpg" />
 
-<HEICImage src="/static/images/gallery/sky-cloud.HEIC" />
+<HEICImage src="/static/images/gallery/sky-cloud.HEIC" alt="cloudy sky" />
