--- a/data/blog/css-anchor-positioning-api.mdx
+++ b/data/blog/css-anchor-positioning-api.mdx
@@ -56,6 +56,6 @@ button {
 
 ## 兼容性
 
-<Compatibility target="css-anchor-positioning" height="500px" />
+<Compatibility feat="css-anchor-positioning" height="500px" />
 
 [^1]: [CSS Anchor Positioning API](https://developer.chrome.com/blog/anchor-positioning-api)
