--- a/data/blog/service-worker.mdx
+++ b/data/blog/service-worker.mdx
@@ -1,25 +1,28 @@
 ---
-title: 如何使用 Service Worker 增强应用
+title: 如何使用 ServiceWorker 增强应用
 date: '2024-08-12'
-tags: ['javascript', 'nextjs', 'Service Worker']
-draft: true
-summary: 使用 Service Worker 缓存增强应用，甚至于离线使用
+tags: ['javascript', 'nextjs', 'ServiceWorker']
+draft: false
+summary: 使用 ServiceWorker 缓存增强应用，甚至于离线使用
 ---
 
-## Service Worker 是什么
+## ServiceWorker 是什么
 
-Service Worker 是专门的 JavaScript 资源，用作网络浏览器和网络服务器之间的代理。类似于 Web Worker，所有工作都独立于主线程执行。
+ServiceWorker 是专门的 JavaScript 资源，用作网络浏览器和网络服务器之间的代理。类似于 Web Worker，所有工作都独立于主线程执行。
 
-结合 [CacheStorage API](https://developer.mozilla.org/zh-CN/docs/Web/API/CacheStorage)，在 Service Worker 中拦截应用中所有请求并添加相应的缓存策略，
+结合 [CacheStorage API](https://developer.mozilla.org/zh-CN/docs/Web/API/CacheStorage)，在 ServiceWorker 中拦截应用中所有请求并添加相应的缓存策略，
 就可以在离线场景下，使用本地缓存降级支持所有请求响应，从而实现网络应用的离线使用。
 
-请注意使用 Service Worker 属于渐进式增强，也就是如果不支持 Service Worker 或者在 Service Worker 中工作出错，应用仅是退化成普通的 Web 应用，基本功能不会中断支持。
+请注意以下两点
 
-## Service Worker 的生命周期[^1]
+- 使用 ServiceWorker 属于渐进式增强，也就是如果不支持 ServiceWorker 或者在 ServiceWorker 中工作出错，应用仅是退化成普通的 Web 应用，基本功能不会中断支持。
+- 为确保安全 ServiceWorker 仅 https 和 localhost 可启用
 
-一个网页如果添加了 Service Worker 支持的话，首次访问网页时，页面的加载和 Service Worker 下载安装同时进行，页面正常提供基本功能。
+## ServiceWorker 的生命周期[^1]
 
-### 在主线程注册 Service Worker
+一个网页如果添加了 ServiceWorker 支持的话，首次访问网页时，页面的加载和 ServiceWorker 下载安装同时进行，页面正常提供基本功能。
+
+### 在主线程注册 ServiceWorker
 
 ```js
 window.addEventListener('load', () => {
@@ -31,17 +34,17 @@ window.addEventListener('load', () => {
 })
 ```
 
-### Service Worker 安装
+### ServiceWorker 安装
 
-Service Worker 会在注册后触发其 install 事件。每个 Service Worker 只能调用 install 一次，并且在更新前不会再次触发。
+ServiceWorker 会在注册后触发其 install 事件。每个 ServiceWorker 只能调用 install 一次，并且在更新前不会再次触发。
 
-```js:service-worker.js
+```js:service_worker.js
 self.addEventListener('install', (event) => { })
 ```
 
-### Service Worker 激活 activated
+### ServiceWorker 激活 activated
 
-如果注册和安装成功，Service Worker 就会激活，并且其状态会变为 'activating'。可以在此时开始工作。
+如果注册和安装成功，ServiceWorker 就会激活，并且其状态会变为 'activating'。可以在此时开始工作。
 
 ```js
 self.addEventListener('activate', (event) => {
@@ -49,9 +52,171 @@ self.addEventListener('activate', (event) => {
 })
 ```
 
-在安装并激活 Service Worker 后，它将接管页面，开始工作，提高可靠性和速度。
+在安装并激活 ServiceWorker 后，它将接管页面，开始工作，提高可靠性和速度。
 
 ### 更新
 
+在执行导航和功能事件后，浏览器会自动检查更新，也可以手动触发更新：
+
+```js
+navigator.serviceWorker.register('/service_worker.js').then(reg => {
+  // sometime later…
+  reg.update();
+});
+```
+
+## 拦截网络请求
+
+ServiceWorker 支持 fetch 事件，监听主线程发出的任何请求，先忽略这里 `caches.open()` 的调用，下文再介绍
+
+```js:service_worker.js
+const cacheName = 'ImageCacheName';
+
+self.addEventListener('fetch', async (event) => {
+  if (event.request.destination === 'image') {
+    // 拦截所有图片请求，有缓存则直接返回，无则请求后缓存并返回
+    const cacheStore = await caches.open(cacheName)
+    const cachedImage = await cacheStore.match(event.request)
+    if (cachedImage) {
+      return cachedImage
+    }
+    const response = await fetch(event.request.url)
+    cacheStore.put(event.request, fetchedResponse.clone());
+    return response
+  }
+});
+```
+
+`event.request` 类型声明
+
+- `url` 当前网络请求的网址
+- `method` HTTP method
+- `mode` 请求模式 值 'navigate' 通常用于区分对 HTML 文档的请求与其他请求
+- `destination` 请求的内容类型，并避免使用所请求资源的文件扩展名
+
+此时，network 面板可以看到，响应图片请求的不再是 server，而是 ServiceWorker（需要后面刷新页面才能看到）
+
+![sw-image-network](/static/images/mdx/sw-image-network.png)
+
+## Cache API
+
+上面在 ServiceWorker 中缓存的使用与 HTTP 缓存并不冲突，Cache 接口是一种完全独立于 HTTP 缓存的缓存机制。可以认为是比 HTTP 应用层缓存更高一层的 JavaScript API 级别的磁盘缓存（不同于代码级别实现的运行时内存缓存）
+
+Cache API 为 Request / Response 对象提供缓存机制，它与 ServiceWorker 的生命周期 API 的一部分提供，但它同时也是暴露在 window 作用域下的，不必一定要配合 service worker 使用。
+
+关于 Service Worker 缓存的一些重要 API 方法包括：
+
+- `CacheStorage.open` 创建新的 Cache 实例，或者通过 `Window.caches` 或 `WorkerGlobalScope.caches` 访问
+- `Cache.add` 和 `Cache.put` 将网络响应存储在缓存中。
+- `Cache.match` 在 Cache 实例中查找缓存的响应。
+- `Cache.delete` 从 Cache 实例中移除缓存的响应。
+
+## 缓存策略
+
+下面介绍两种常用的缓存策略以支持应用不同资源的处理
+
+### 缓存优先，回退到网络
+
+上面示例采用的是缓存优先策略，有缓存则优先使用缓存，无缓存才发起请求。
+
+这种策略适用于所有静态资源，CSS、JavaScript、图片、字体等等，虽然此类资源一般也会应用 HTTP 缓存策略，但在 ServiceWorker 中缓存后，可以进一步提高速度，以及获得离线使用能力。
+
+### 网络优先，回退到缓存
+
+此种策略下，资源请求一律在 ServiceWorker 转发为网络请求并更新到缓存响应，一但网络离线时，便直接使用缓存，这是实现应用离线使用的关键。
+
+这种策略很适合 html 文档请求或者资源类 API
+
+### 仅缓存
+
+这种策略会将所有请求都导向缓存，就需要预缓存所有资源。
+
+```js:service_worker.js
+self.addEventListener('install', (event) => {
+  event.waitUntil(caches.open('StaticCacheStore').then((cache) => {
+    return cache.addAll([
+      '/1.js',
+      '/2.css',
+      '/3.jpg'
+    ])
+  }))
+})
+```
+
+组合不同的缓存策略可以为应用实现丝滑的在线和离线使用支持，比如这个博客中的静态资源采用缓存优先，页面文档等采用网络优先，可以关闭网络后尝试刷新，页面仍可以正常加载查看
+
+## Workerbox
+
+Workerbox 是 Chrome 提供的一组 ServiceWorker 生命周期和缓存策略的封装，简化应用的 ServiceWorker 增强使用
+
+- workbox-routing，用于请求匹配。
+- workbox-strategies，适用于缓存策略。
+- workbox-precaching（用于预缓存）。
+- workbox-expiration，用于管理缓存。
+- workbox-window，用于注册 Service Worker 并处理更新。
+
+以及 worker-build 直接在开发构建过程中生成 ServiceWorker，如你使用 webpack 作为开发构建工具，还可直接选用已提供的 workbox-webpack-plugin `GenerateSW` 和 `InjectManifest`
+
+### 示例：NextJS
+
+```ts:service_worker.ts
+import { precacheAndRoute } from 'workbox-precaching'
+import { registerRoute } from 'workbox-routing'
+import { StaleWhileRevalidate } from 'workbox-strategies'
+
+declare const self: ServiceWorkerGlobalScope
+
+// Precache files
+precacheAndRoute(self.__WB_MANIFEST)
+
+// Cache pages
+registerRoute(
+  ({ request }) => request.mode === 'navigate',
+  new StaleWhileRevalidate({
+    cacheName: 'pages-cache',
+  })
+)
+
+// Cache static resources
+registerRoute(
+  ({ request }) =>
+    request.destination === 'style' ||
+    request.destination === 'script' ||
+    request.destination === 'image',
+  new StaleWhileRevalidate({
+    cacheName: 'static-resources-cache',
+  })
+)
+```
+
+```js:next.config.js
+const { InjectManifest } = require("workbox-webpack-plugin");
+
+/**
+ * @type {import('next/dist/next-server/server/config').NextConfig}
+ **/
+module.exports = {
+  // ...
+  webpack: (config, options) => {
+    config.plugin.push(new InjectManifest({
+      swSrc: './worker/service_worker.ts',
+      swDest: '/service_worker.js',
+      exclude: [
+        /^build-manifest\.json$/i,
+        /^react-loadable-manifest\.json$/i,
+        /\/_error\.js$/i,
+        /\.js\.map$/i,
+        /\.map$/, /_next\/static\/.*/
+      ],
+      include: [/_next\/app-build-manifest\.json/],
+    }))
+    return config
+  },
+}
+```
+
+最后可以看到，网络处于关闭状态，刷新页面网络请求全部失败，但回退到缓存，仍然可以正常加载展示，真正实现离线使用
+
+![sw-offline](/static/images/mdx/sw-offline.png)
 
 [^1]: [Service Worker 生命周期](https://web.dev/articles/service-worker-lifecycle?hl=zh-cn)
