--- a/data/blog/service-worker.mdx
+++ b/data/blog/service-worker.mdx
@@ -1,7 +1,7 @@
 ---
 title: 如何使用 ServiceWorker 增强应用
-date: '2024-08-12'
-tags: ['javascript', 'nextjs', 'ServiceWorker']
+date: '2024-08-13'
+tags: ['javascript', 'nextjs', 'ServiceWorker', 'chrome']
 draft: false
 summary: 使用 ServiceWorker 缓存增强应用，甚至于离线使用
 ---
