--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,4 +9,4 @@ email: chenyh.site@gmail.com
 github: https://github.com/stillsailing
 ---
 
-I am a web developer, and I love to programming and create intersting things.
+Hello! I am a web developer, and I love to programming and create intersting things. So glad you checked out my website.
