fix: site title

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: chenyh
-avatar: /static/favicons/flower.svg
+avatar: /static/svg/flower.svg
 occupation: Web Developer
 # company: Stanford University
 email: chenyh.site@gmail.com
