feat: update the main page

--- a/data/author/default.mdx
+++ b/data/author/default.mdx
@@ -11,5 +11,5 @@ github: https://github.com/stillsailing
 
 Hello! I am a web developer, and I love to programming and create intersting things. So glad you checked out my website.
 
-折腾过好几次个人网站最终都放弃了，后来在 nextjs 官网看到了这个[模板](https://github.com/timlrx/tailwind-nextjs-starter-blog)还挺好看，
-静态博客也比较好维护，便直接 clone 代码自己改造了，这次真的感觉到 tailwindcss 的香了，nextjs ssg + hydate 的方案兼具多页应用的 seo 和单页应用的体验
+折腾过好几次个人网站最终都放弃了，后来在 NextJS 官网看到了这个[模板](https://github.com/timlrx/tailwind-nextjs-starter-blog)还挺好看，
+静态博客也比较好维护，便直接 clone 代码自己改造了，这次真的感觉到 tailwindcss 的香了，NextJS SSG + hydate 的方案兼具多页应用的 seo 和单页应用的体验
