--- a/data/blog/rss.mdx
+++ b/data/blog/rss.mdx
@@ -4,6 +4,7 @@ date: '2023-12-22'
 tags: ['rss', 'javascript', 'nodejs']
 draft: false
 summary: 摆脱推荐算法，简化你的信息获取方式，如何用 RSS 订阅一切，网站、博客、社交平台...
+images: ['/static/images/mdx/mdn-rss.png']
 ---
 
 你在浏览网站的时候一定见到过这个像 wifi 的标志，一般在底部或者顶部，不过这并不是 wifi 😂 而是表示您可以使用 rss 订阅此网站 
