feat: update main

--- a/data/blog/service-worker.mdx
+++ b/data/blog/service-worker.mdx
@@ -5,6 +5,7 @@ lastUpdateDate: '2024-08-14'
 tags: ['javascript', 'nextjs', 'ServiceWorker', 'chrome']
 draft: false
 summary: 使用 ServiceWorker 缓存增强应用，甚至于离线使用
+images: ['/static/images/mdx/sw-banner.png']
 ---
 
 ## ServiceWorker 是什么
