--- a/data/blog/nextjs-docker.mdx
+++ b/data/blog/nextjs-docker.mdx
@@ -6,7 +6,8 @@ draft: true
 summary: 摆脱推荐算法，简化你的信息获取方式，如何用 RSS 订阅一切，网站、博客、社交平台...
 ---
 
-Vercel 用起来是真方便，但国内直接被墙了没办法呀，只好自己买个云服务器托管了，第一想法就是 docker 部署了，原来的模板代码[^1]是没有集成 docker 构建的，因此自己
+Vercel 用起来是真方便，免运维 + github 提交自动触发 CI/CD，确实太香了，但国内直接被墙了没办法呀，
+只好自己买个云服务器托管了，第一想法就是 docker 部署了，原来的模板代码[^1]是没有集成 docker 构建的，因此自己找文档加上了
 
 
 [^1]: [模版 tailwind-nextjs-starter-blog](https://github.com/timlrx/tailwind-nextjs-starter-blog)
