fix: tags url error

--- a/data/blog/music-player-in-extension.mdx
+++ b/data/blog/music-player-in-extension.mdx
@@ -1,7 +1,7 @@
 ---
 title: 如何在浏览器扩展程序中创建音乐播放器
 date: '2024-08-06'
-tags: ['javascript', 'chrome']
+tags: ['javascript', 'chrome', 'extension']
 draft: false
 summary: 如何在浏览器插件中创建音乐播放器
 ---
@@ -88,4 +88,3 @@ chrome.runtime.onMessage.addListener(function (request, sender, sendResponse) {
   </body>
 </html>
 ```
-
