--- a/data/blog/browser-extension.mdx
+++ b/data/blog/browser-extension.mdx
@@ -341,7 +341,7 @@ function start() {
 start()
 ```
 
-（这里是有更好的流程设计，比如使用 `chrome.storage` API，仅做教程演示使用此流程）
+（这里是有更好的流程设计，比如使用 `chrome.storage` 或者 `chrome.notifications` API，仅做教程演示使用此流程）
 
 ### 工程化
 
