--- a/data/snippet/wuhan-sky.mdx
+++ b/data/snippet/wuhan-sky.mdx
@@ -4,8 +4,8 @@ date: '2024-08-01'
 draft: false
 ---
 
-<img src="/static/images/gallery/sky.jpg" />
-
-<img src="/static/images/gallery/sky-building.jpg" />
+<ImageGallery
+  images={['/static/images/gallery/sky.jpg', '/static/images/gallery/sky-building.jpg']}
+/>
 
 <HEICImage src="/static/images/gallery/sky-cloud.HEIC" alt="cloudy sky" />
