chore: little fix

--- a/data/blog/browser-extension.mdx
+++ b/data/blog/browser-extension.mdx
@@ -709,20 +709,38 @@ chrome.contextMenus.onClicked.addListener(function (info, tab) {
 
 ### 安全问题
 
+#### CSP 内容安全策略
+
+默认情况下，插件只能从自己目录加载资源，相当于有默认配置
+
+```json:manifest.json
+{
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self"
+  }
+}
+```
+
+并且由于扩展程序属于高权限环境，因此不支持配置 `unsafe-eval`，`eval()`、`new Function()`、`setTimeout(String)`、`setInterval(String)` 拥有动态执行代码能力的代码都被禁用
+
+#### Sandbox 沙箱机制
+
+如果必须使用的话，并不是没有办法，需要创建 sandbox 然后通过 iframe 加载并通信，但在 sandbox 中被禁止调用诸如 `chrome.*` 的任何浏览器 API
+
+```json:manifest.json
+{
+  "sandbox": {
+    "pages": ["sandbox.html"]
+  }
+}
+```
+
+还是举例说明，比如想在插件中代理请求 mock 代替接口返回，但是需要支持脚本动态 mock 数据
+
+#### 开发和使用注意
+
 1. 权限最小化原则：应只请求完成其功能所需的最小权限，避免请求不必要的权限。
-
-2. CSP 内容安全策略：默认情况下，插件只能从自己目录加载资源，相当于有默认配置
-
-   ```json:manifest.json
-   {
-     "content_security_policy": {
-       "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
-     }
-   }
-   ```
-
-3. 安装前仔细查看其请求的权限列表，评估是否合理
-4. 谨慎授权，插件请求授权时评估其合理性
+2. 谨慎授权：安装前仔细查看其请求的权限列表，评估其合理性
 
 ## 案例分享
 
