--- a/data/blog/browser-extension.mdx
+++ b/data/blog/browser-extension.mdx
@@ -701,7 +701,7 @@ chrome.contextMenus.onClicked.addListener(function (info, tab) {
 
 ![Search in MDN](/static/images/mdx/extension/menu-select.png)
 
-以上例子已打包成扩展程序发布到 [github]()，欢迎试用体验
+以上例子已打包成扩展程序发布到 [github](https://github.com/stillsailing/search-in-mdn)，欢迎试用体验
 
 ### More
 
