--- a/data/blog/nextjs-docker.mdx
+++ b/data/blog/nextjs-docker.mdx
@@ -3,6 +3,7 @@ title: NextJS 应用使用 docker 自托管部署
 date: '2024-09-03'
 tags: ['nextjs', 'javascript', 'docker']
 draft: false
+category: Snippet
 ---
 
 Vercel 用起来是真方便，免运维 + github 提交自动触发 CI/CD，确实太香了，但国内直接被墙了没办法呀，
