--- a/data/blog/sse-post.mdx
+++ b/data/blog/sse-post.mdx
@@ -1,11 +1,11 @@
 ---
 title: 支持 SSE 进行 POST 请求
-date: '2025-02-29'
+date: '2025-04-29'
 tags: ['javascript', 'rxjs', 'http', 'sse']
 category: 'Snippet'
 ---
 
-EventSource 接口是 web 内容与[服务器发送事件](https://developer.mozilla.org/docs/Web/API/Server-sent_events) (Server Send Event) 通信的接口。它基于 HTTP 协议提供了一种简单、高效的方式，为浏览器中的网页提供实时更新功能。
+EventSource 接口是 web 内容与[服务器发送事件](https://developer.mozilla.org/docs/Web/API/Server-sent_events) (Server-Send Event) 通信的接口。它基于 HTTP 协议提供了一种简单、高效的方式，为浏览器中的网页提供实时更新功能。
 
 基本使用像下面这样
 
